Renamed module ’communication’ to ’ports’ to have the same name for the same concept in AML model and code. First draft for abstraction of communication-style.

--- a/node1/pom.xml
+++ b/node1/pom.xml
@@ -15,11 +15,11 @@
         <!-- pushlistener -->
         <dependency>
             <groupId>com.jwa.pushlistener</groupId>
-            <artifactId>communication</artifactId>
+            <artifactId>messagemodel</artifactId>
         </dependency>
         <dependency>
             <groupId>com.jwa.pushlistener</groupId>
-            <artifactId>messagemodel</artifactId>
+            <artifactId>ports</artifactId>
         </dependency>
     </dependencies>
     <profiles>
