--- a/ports/pom.xml
+++ b/ports/pom.xml
@@ -16,6 +16,7 @@
         <dependency>
             <groupId>com.jwa.pushlistener</groupId>
             <artifactId>messagemodel</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
