--- a/component3/pom.xml
+++ b/component3/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>com.jwa.pushlistener.code.architecture</groupId>
-            <artifactId>ports</artifactId>
+            <artifactId>communication</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
