Adapted Maven pom and launch files to renamed components (commit 5a050e5).

--- a/component1/pom.xml
+++ b/component1/pom.xml
@@ -26,7 +26,7 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>node1</id>
+            <id>component1</id>
             <build>
                 <plugins>
                     <plugin>
