--- a/component2/pom.xml
+++ b/component2/pom.xml
@@ -26,7 +26,7 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>node2</id>
+            <id>component2</id>
             <build>
                 <plugins>
                     <plugin>
