--- a/component3/pom.xml
+++ b/component3/pom.xml
@@ -26,7 +26,7 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>node3</id>
+            <id>component3</id>
             <build>
                 <plugins>
                     <plugin>
