--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
         <module>component3</module>
     </modules>
     <properties>
-        <!-- project -->
+        <!-- Project -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <!-- dependencies -->
+        <!-- Dependencies -->
         <guava.version>22.0</guava.version>
         <junit.version>4.12</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
@@ -29,17 +29,15 @@
         <log4j-slf4j-impl.version>${log4j.version}</log4j-slf4j-impl.version>
         <log4j-api.version>${log4j.version}</log4j-api.version>
         <log4j-core.version>${log4j.version}</log4j-core.version>
-        <!-- maven plugins -->
+        <!-- Maven plugins -->
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     </properties>
     <dependencies>
-        <!-- Google Guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
-        <!-- test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -52,7 +50,6 @@
             <version>${mockito-all.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
