--- a/messagemodel/pom.xml
+++ b/messagemodel/pom.xml
@@ -11,4 +11,11 @@
     <groupId>com.jwa.pushlistener.code.architecture</groupId>
     <artifactId>messagemodel</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.jwa.pushlistener.code.architecture</groupId>
+            <artifactId>communication</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
